# docs/swagger.yaml
@@ -1,52 +1,244 @@
 basePath: /api/v1
-externalDocs:
-  description: OpenAPI
-  url: https://swagger.io/resources/open-api/
+definitions:
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
+  httputil.HTTPError:
+    properties:
+      code:
+        example: 400
+        type: integer
+      message:
+        example: status bad request
+        type: string
+    type: object
+  models.Post:
+    properties:
+      author:
+        type: string
+      body:
+        type: string
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      draft:
+        type: boolean
+      id:
+        type: integer
+      likes:
+        type: integer
+      title:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  requests.PostRequest:
+    properties:
+      author:
+        type: string
+      body:
+        type: string
+      draft:
+        type: boolean
+      likes:
+        type: integer
+      title:
+        type: string
+    type: object
 host: localhost:3000
 info:
   contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
+    email: saokimsong@gmail.com
+    name: Kimsong SAO
+    url: https://www.linkedin.com/in/kimsongsao/
   description: This is a sample server celler server.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
+  title: Swagger Rest API with GIN & GORM
   version: "1.0"
 paths:
   /posts:
     get:
       consumes:
       - application/json
-      description: Get post list
+      description: get posts
+      parameters:
+      - description: name search by q
+        in: query
+        name: q
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: json
-      summary: Get posts.
+            items:
+              $ref: '#/definitions/models.Post'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Show all posts
       tags:
-      - example
+      - posts
+    post:
+      consumes:
+      - application/json
+      description: Create post
+      parameters:
+      - description: Post Data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Post'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Create a post
+      tags:
+      - posts
   /posts/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete by post ID
+      parameters:
+      - description: Post ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            $ref: '#/definitions/models.Post'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Delete a post
+      tags:
+      - posts
     get:
       consumes:
       - application/json
-      description: Get post list
+      description: get posts by ID
+      parameters:
+      - description: Post Id
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: json
-      summary: Get a post by id.
+            $ref: '#/definitions/models.Post'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Show a post
       tags:
-      - example
+      - posts
+    put:
+      consumes:
+      - application/json
+      description: Update post by ID
+      parameters:
+      - description: Post Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Post Update Data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/requests.PostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Post'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Update a post
+      tags:
+      - posts
 securityDefinitions:
-  BasicAuth:
-    type: basic
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
