# main.go
@@ -4,12 +4,11 @@ import (
 	"golangrestapi/config"
 	"golangrestapi/controllers"
 
+	_ "golangrestapi/docs"
+
 	"github.com/gin-gonic/gin"
-
-	ginSwagger "github.com/swaggo/gin-swagger"
-
-	// gin-swagger middleware
 	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 // swagger embed files
@@ -19,20 +18,22 @@ func init() {
 	config.DatabaseInit()
 }
 
-// @title           Swagger Example API
-// @version         1.0
-// @description     This is a sample server celler server.
-// @termsOfService  http://swagger.io/terms/
-// @contact.name   API Support
-// @contact.url    http://www.swagger.io/support
-// @contact.email  support@swagger.io
-// @license.name  Apache 2.0
-// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
-// @host      localhost:3000
-// @BasePath  /api/v1
-// @securityDefinitions.basic  BasicAuth
-// @externalDocs.description  OpenAPI
-// @externalDocs.url          https://swagger.io/resources/open-api/
+// @title						Swagger Rest API with GIN & GORM
+// @version					1.0
+// @description				This is a sample server celler server.
+// @termsOfService				http://swagger.io/terms/
+// @contact.name				Kimsong SAO
+// @contact.url				https://www.linkedin.com/in/kimsongsao/
+// @contact.email				saokimsong@gmail.com
+// @license.name				Apache 2.0
+// @license.url				http://www.apache.org/licenses/LICENSE-2.0.html
+// @host						localhost:3000
+// @BasePath					/api/v1
+// @securityDefinitions.apikey	BearerAuth
+// @in							header
+// @name						Authorization
+// @externalDocs.description	OpenAPI
+// @externalDocs.url			https://swagger.io/resources/open-api/
 func main() {
 	r := gin.Default()
 	v1 := r.Group("/api/v1")
@@ -42,11 +43,11 @@ func main() {
 			posts.GET(":id", controllers.GetPost)
 			posts.GET("", controllers.GetPosts)
 			posts.POST("", controllers.CreatePost)
-			posts.DELETE(":id", controllers.DeletePost)
+			// posts.DELETE(":id", controllers.DeletePost)
 			posts.PUT(":id", controllers.UpdatePost)
 			// posts.POST(":id/images", c.UploadAccountImage)
 		}
 	}
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.Run()
 }
